src/app/style/loading.modal.less
/* Animation by @tobiasahlin with ❤ */

.loading.modal:after {
    content: "";
    display: block;
    width: 2em;
    height: 2em;
    position: absolute;
    background-color: @global-primary-text-color;
    top: ~"calc(50% - 2.5em)";
    left: ~"calc(50% - 1em)";
    border-radius: 100%;  
    animation: sk-scaleout 1.0s infinite ease-in-out;
}

.loading.modal:before {
    content: "Loading your Data";
    text-align: center;
    font-size: 1em;
    height: 1em;
    width: 100%;
    position: absolute;
    top: ~"calc(50% + 1em)";
    left: 0;
    color: @global-primary-text-color;
}

@keyframes sk-scaleout {
  0% { 
    transform: scale(0);
  } 100% {
    transform: scale(1.0);
    opacity: 0;
  }
}

